2_psql_db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: moodle
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
