3_moodle.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: bitnamilegacy/moodle:latest
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - mountPath: /bitnami/moodle
              name: moodle-storage
            - mountPath: /bitnami/moodledata
              name: moodledata-storage
      volumes:
        - name: moodle-storage
          persistentVolumeClaim:
            claimName: moodle-pvc
        - name: moodledata-storage
          persistentVolumeClaim:
            claimName: moodledata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: moodle
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: moodle
