4_moodle_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  namespace: moodle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - moodle.local
      secretName: moodle-tls
  rules:
    - host: moodle.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
